[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bling"
version = "0.1.0"
description = "Drive a Browserling sandbox from Python — HAR capture for humans and agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Browserling" }]
keywords = ["browserling", "browser-testing", "har", "playwright", "automation"]
dependencies = [
    "playwright>=1.40",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.scripts]
bling = "bling.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bling"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "A"]   # pycodestyle, pyflakes, isort, bugbear, pyupgrade, builtins-shadowing
ignore = ["A002"]                          # allow the domain-correct `os=` keyword argument

[tool.pytest.ini_options]
markers = ["live: needs a logged-in Browserling session (not run in CI)"]
